[dg_simple] 1. rename dg_test to dg_simple 2. add external configuration file (dg_simaple.yml)

--- a/examples/dg_simple/dg_simple.vcxproj
+++ b/examples/dg_simple/dg_simple.vcxproj
@@ -83,7 +83,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>..\..\EXTERNAL\OpenCV\lib;..\..\EXTERNAL\python\lib;..\..\EXTERNAL\curl\lib;..\..\EXTERNAL\curl\lib</AdditionalLibraryDirectories>
