--- a/examples/dg_simple_ros/package.xml
+++ b/examples/dg_simple_ros/package.xml
@@ -19,7 +19,7 @@
     <!-- Url tags are optional, but multiple are allowed, one per tag -->
     <!-- Optional attribute type can be: website, bugtracker, or repository -->
     <!-- Example: -->
-    <!-- <url type="website">http://wiki.ros.org/dg_test</url> -->
+    <!-- <url type="website">http://wiki.ros.org/dg_ros</url> -->
 
 
     <!-- Author tags are optional, multiple are allowed, one per tag -->
