--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -5,7 +5,7 @@ enable_roadtheta: 0
 enable_vps: 1
 enable_poi: 1
 enable_logo: 0
-enable_intersect: 0
+enable_intersection: 0
 enable_exploration: 0
 
 ## other main settings
