[Common] Fix a bug in 'dg_simple_ros'

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 src/exploration/data_exp
+
+EXTERNAL/OpenCV/include
+EXTERNAL/OpenCV/lib
+EXTERNAL/Python/include
+EXTERNAL/Python/lib
+
 examples/exploration_test/build/
+
+bin/*.exe
+bin/*.pdb
+bin/*.ipdb
+bin/*.iobj
+bin/*.ilk
+bin/data_localizer
+
+x64
+__pycache__
