--- a/examples/dg_simple_ros/package.xml
+++ b/examples/dg_simple_ros/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-    <name>dg_ros</name>
+    <name>dg_simple_ros</name>
     <version>0.0.0</version>
-    <description>The dg_ros package</description>
+    <description>The dg_simple_ros package</description>
 
     <!-- One maintainer tag required, multiple allowed, one person per tag -->
     <!-- Example:  -->
@@ -19,7 +19,7 @@
     <!-- Url tags are optional, but multiple are allowed, one per tag -->
     <!-- Optional attribute type can be: website, bugtracker, or repository -->
     <!-- Example: -->
-    <!-- <url type="website">http://wiki.ros.org/dg_ros</url> -->
+    <!-- <url type="website">http://wiki.ros.org/dg_simple_ros</url> -->
 
 
     <!-- Author tags are optional, multiple are allowed, one per tag -->
