--- a/src/logo_recog/requirements.txt
+++ b/src/logo_recog/requirements.txt
@@ -1,9 +1,10 @@
 requests
 tqdm
 sklearn
-keras==2.2.4
 scikit-learn
 pillow==6.2.2
-tensorflow-gpu
-opencv-python-contrib==3.4.2.17
+tensorflow-gpu==1.15.0
+keras==2.2.4
+opencv-contrib-python==3.4.2.17
 tensorboardX
+matplotlib
