--- a/src/logo_recog/.gitignore
+++ b/src/logo_recog/.gitignore
@@ -1,6 +1,7 @@
 logo_data/LogosInTheWild-v2/*
 model/keras_yolo3/model_data/*
 model/*.hdf5
+model/*.tar.gz
 logo_data/kr_brandROIs/*
 logo_data/*.ipynb
 logo_data/test/*
