[dg_simple] data logging support & overall revision of python modules  - add data logging function to each python module  - embed draw, message print, data logging to each python module  - rename poi to logo, and add ocr module  - all python modules are now integrated in dg_simple  - add data logging to dg_simple

--- a/examples/dg_simple/dg_simple.vcxproj
+++ b/examples/dg_simple/dg_simple.vcxproj
@@ -100,6 +100,15 @@
     <ClCompile Include="..\..\src\utils\python_embedding.cpp" />
     <ClCompile Include="dg_simple.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\src\core\basic_type.hpp" />
+    <ClInclude Include="..\..\src\core\map.hpp" />
+    <ClInclude Include="..\..\src\core\path.hpp" />
+    <ClInclude Include="..\..\src\utils\opencx.hpp" />
+    <ClInclude Include="..\..\src\utils\opensx.hpp" />
+    <ClInclude Include="..\..\src\utils\python_embedding.hpp" />
+    <ClInclude Include="..\..\src\utils\vvs.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
