--- a/examples/dg_simple/dg_simple.yml
+++ b/examples/dg_simple/dg_simple.yml
@@ -1,11 +1,11 @@
 %YAML:1.0
 ---
 ## activate/deactivate submodules
-enable_roadtheta: 0
-enable_vps: 0
-enable_poi: 0
-enable_logo: 0
 enable_intersection: 0
+enable_vps: 0
+enable_poi_logo: 0
+enable_poi_ocr: 0
+enable_roadtheta: 0
 enable_exploration: 0
 
 ## other main settings
@@ -16,6 +16,8 @@ dg_srcdir: "./../src"               # path of deepguider/src folder (required fo
 
 ## etc
 recording: 0
+recording_fps: 30
+data_logging: 0
 map_image_path: "data/NaverMap_ETRI(Satellite)_191127.png"
 gps_input: "data/191115_ETRI_asen_fix.csv"
 video_input: "data/191115_ETRI.avi"
