--- a/examples/ocr_test/ocr_test.vcxproj
+++ b/examples/ocr_test/ocr_test.vcxproj
@@ -97,6 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\ocr_recog\ocr_recognizer.hpp" />
+    <ClInclude Include="..\..\src\utils\python_embedding.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\src\ocr_recog\ocr_recognizer.py" />
