--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -1,11 +1,11 @@
 %YAML:1.0
 ---
 ## activate/deactivate submodules
-enable_roadtheta: 0
+enable_intersection: 1
 enable_vps: 1
-enable_poi: 1
-enable_logo: 0
-enable_intersection: 0
+enable_poi_logo: 1
+enable_poi_ocr: 1
+enable_roadtheta: 0
 enable_exploration: 0
 
 ## other main settings
@@ -16,5 +16,7 @@ dg_srcdir: "/work/deepguider/src"   # path of deepguider/src folder (required fo
 
 ## etc
 recording: 0
+recording_fps: 30
+data_logging: 0
 map_image_path: "data/NaverMap_ETRI(Satellite)_191127.png"
 recording_header_name: "dg_ros_"
