--- a/examples/dg_simple/dg_simple.yml
+++ b/examples/dg_simple/dg_simple.yml
@@ -15,9 +15,10 @@ threaded_run_python: 0
 dg_srcdir: "./../src"               # path of deepguider/src folder (required for python embedding)
 
 ## etc
-recording: 0
-recording_fps: 30
-data_logging: 0
+enable_data_logging: 0
+enable_tts: 0
+video_recording: 0
+video_recording_fps: 30
 map_image_path: "data/NaverMap_ETRI(Satellite)_191127.png"
 gps_input: "data/191115_ETRI_asen_fix.csv"
 video_input: "data/191115_ETRI.avi"
