[General] add map_painter (alternative of graph_painter)

--- a/examples/dg_simple/dg_simple.vcxproj
+++ b/examples/dg_simple/dg_simple.vcxproj
@@ -104,6 +104,7 @@
     <ClInclude Include="..\..\src\core\basic_type.hpp" />
     <ClInclude Include="..\..\src\core\map.hpp" />
     <ClInclude Include="..\..\src\core\path.hpp" />
+    <ClInclude Include="..\..\src\utils\map_painter.hpp" />
     <ClInclude Include="..\..\src\utils\opencx.hpp" />
     <ClInclude Include="..\..\src\utils\opensx.hpp" />
     <ClInclude Include="..\..\src\utils\python_embedding.hpp" />
