--- a/examples/dg_simple/CMakeLists.txt
+++ b/examples/dg_simple/CMakeLists.txt
@@ -17,7 +17,7 @@ add_definitions(-DDG_TEST_SIMPLE)
 
 find_package( PythonInterp 3.6 REQUIRED )
 find_package( PythonLibs 3.6 REQUIRED )
-find_package( OpenCV REQUIRED )
+find_package( OpenCV 4.0 REQUIRED )
 find_package( CURL REQUIRED ) 
 
 INCLUDE_DIRECTORIES ( ${SRCDIR} ${RAPIDJSON_INC} ${PYTHON_INCLUDE_DIRS} )
