y[setup] You can create and make ros workspace using following script : 	examples/dg_simple_ros/setup_rosrun_ccsmm.sh
Before you run it, the only thing to do is to enter your ros workspace you want to use in it.
in setup_rosrun_ccsmm.sh
ROSDIR="/home/dg/dg_ws"i
  ===>
ROSDIR="/home/your_home/your_ws"

--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -9,8 +9,8 @@ enable_roadtheta: 0
 enable_exploration: 0
 
 ## other main settings
-#server_ip: "127.0.0.1"             # localhost
-server_ip: "129.254.87.96"          # etri map server
+server_ip: "127.0.0.1"             # localhost
+#server_ip: "129.254.87.96"          # etri map server
 threaded_run_python: 1
 dg_srcdir: "/work/deepguider/src"   # path of deepguider/src folder (required for python embedding)
 
