Updates on Initialization

--- a/src/logo_recog/.gitignore
+++ b/src/logo_recog/.gitignore
@@ -6,4 +6,4 @@ logo_data/kr_brandROIs/*
 logo_data/*.ipynb
 logo_data/test/*
 logo_data/input/*
-logo_data/preprocessed/*.pkl
+logo_data/preprocessed/trained_brands.pkl
