--- a/examples/roadtheta_test/roadtheta_test.vcxproj.filters
+++ b/examples/roadtheta_test/roadtheta_test.vcxproj.filters
@@ -18,15 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\roadtheta\roadtheta.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\road_recog\road_direction_recognizer.hpp">
+    <ClInclude Include="..\..\src\roadtheta\roadtheta.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\..\src\road_recog\road_direction_recognizer.py">
-      <Filter>Header Files</Filter>
-    </None>
   </ItemGroup>
 </Project>
