--- a/examples/dg_simple/dg_simple.vcxproj.filters
+++ b/examples/dg_simple/dg_simple.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="dg_simple.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\roadtheta\roadtheta.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\core\basic_type.hpp">
