--- a/examples/dg_simple/dg_simple.yml
+++ b/examples/dg_simple/dg_simple.yml
@@ -7,6 +7,7 @@ enable_poi_logo: 0
 enable_poi_ocr: 0
 enable_roadtheta: 0
 enable_exploration: 0
+enable_mapserver: 1
 
 ## other main settings
 server_ip: "127.0.0.1"                 # localhost
