--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -2,7 +2,7 @@
 ---
 ## activate/deactivate submodules
 enable_intersection: 0
-enable_vps: 1
+enable_vps: 0
 enable_poi_logo: 0
 enable_poi_ocr: 0
 enable_roadtheta: 0
@@ -11,26 +11,32 @@ enable_exploration: 0
 ## other main settings
 server_ip: "127.0.0.1"                  # localhost
 #server_ip: "129.254.87.96"             # ETRI map server
-threaded_run_python: 0
-dg_srcdir: "./../src"                   # path of deepguider/src folder (required for python embedding)
+threaded_run_python: 1
+dg_srcdir: "/home/dgtest/deepguider/src"                   # path of deepguider/src folder (required for python embedding)
 
 ## place settings for ETRI
 map_image_path: "data/NaverMap_ETRI(Satellite)_191127.png"
-#map_ref_point_lat: 36.383837659737     # default
-#map_ref_point_lon: 127.367880828442    # default
-#map_pixel_per_meter: 1.045             # default
-#map_canvas_offset: [ 344, 293 ]        # default
-gps_input: "data/191115_ETRI_asen_fix.csv"
-video_input: "data/191115_ETRI.avi"
+map_ref_point_lat: 36.383837659737     # default
+map_ref_point_lon: 127.367880828442    # default
+map_pixel_per_meter: 1.039             # default
+map_image_rotation: 1.0                 # degree
+map_canvas_offset: [ 347, 297 ]        # default
 
 ## place settings for COEX
 #map_image_path: "data/NaverMap_COEX(Satellite)_200929.png"
 #map_ref_point_lat: 37.506207
 #map_ref_point_lon: 127.05482
-#map_pixel_per_meter: 1.045             # default
-#map_canvas_offset: [ 1073, 1011 ]
-#gps_input: ""
-#video_input: ""
+#map_pixel_per_meter: 1.055             # default
+#map_image_rotation: 1.2                 # degree
+#map_canvas_offset: [ 1090, 1018 ]
+
+## place settings for Bucheon
+#map_image_path: "data/NaverMap_Bucheon(Satellite).png" 
+#map_ref_point_lat: 37.510928     # default 
+#map_ref_point_lon: 126.764344    # default
+#map_pixel_per_meter: 1.056            # default
+#map_image_rotation: 0                 # degree
+#map_canvas_offset: [ 1535, 1157 ]        # default 
 
 ## sensor selection
 use_high_gps: 0
