--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -10,9 +10,25 @@ enable_exploration: 0
 
 ## other main settings
 server_ip: "127.0.0.1"                  # localhost
-#server_ip: "129.254.87.96"             # ETRI map server
+#server_ip: "129.254.81.204"            # ETRI map server
 threaded_run_python: 1
 dg_srcdir: "/home/dgtest/deepguider/src"                   # path of deepguider/src folder (required for python embedding)
+
+## ros topic names (ETRI cart)
+topic_cam: "/uvc_image_raw/compressed"
+topic_gps: "/asen_fix"
+topic_dgps: "/novatel_fix"
+topic_imu: "/imu/data"
+topic_rgbd_image: "/camera/color/image_raw/compressed"
+topic_rgbd_depth: "/camera/depth/image_rect_raw/compressed"
+
+## ros topic names (KETI robot)
+#topic_cam: "/usb_cam_1/image_raw/compressed"
+#topic_gps: "/fix"
+#topic_dgps: ""
+#topic_imu: "/gx5/imu/data"
+#topic_rgbd_image: "/rs_front_camera1/color/image_raw/compressed"
+#topic_rgbd_depth: "/rs_front_camera1/aligned_depth_to_color/image_raw/compressed"
 
 ## place settings for ETRI
 map_image_path: "data/NaverMap_ETRI(Satellite)_191127.png"
