--- a/examples/localizer_test/localizer_test.vcxproj.filters
+++ b/examples/localizer_test/localizer_test.vcxproj.filters
@@ -21,10 +21,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\localizer\utm_converter.cpp">
+    <ClCompile Include="..\..\src\utils\utm_converter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\localizer\road_map.cpp">
+    <ClCompile Include="..\..\src\core\map.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\utils\utility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -35,55 +38,49 @@
     <ClInclude Include="..\..\src\core\map.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\localizer\localizer_simple.hpp">
+    <ClInclude Include="..\..\src\core\path.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="test_localizer_graph.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="test_localizer_gps2utm.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="test_localizer_simple.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="test_localizer_road.hpp">
+    <ClInclude Include="..\..\src\core\shared_date.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\localizer\localizer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="test_localizer_etri.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="test_core_type.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\localizer\road_map.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\localizer\directed_graph.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\localizer\graph_painter.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="test_localizer_ekf.hpp">
+    <ClInclude Include="..\..\src\localizer\localizer_base.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\localizer\localizer_ekf.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\localizer\localizer_base.hpp">
+    <ClInclude Include="..\..\src\localizer\localizer_ekf_variants.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\localizer\localizer_ekf_variants.hpp">
+    <ClInclude Include="..\..\src\localizer\localizer_interface.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\localizer\path_projector.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="localizer_runner.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="run_localizer.hpp">
+    <ClInclude Include="test_core_type.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="test_localizer_ekf.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="test_localizer_etri.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="test_localizer_gps2utm.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="test_localizer_map.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="test_utility.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
